--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,8 +18,8 @@
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/counter"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                    <a [routerLink]='["/search"]' (click)='collapse()'>
+                        <span class='glyphicon glyphicon-education'></span> Search
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
