Added support for Azure B2C authentication.

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Hello, world!</h1>
+<h1>Hello, {{user?.firstName}} {{user?.lastName}}!</h1>
 <h2>I'm a banana!</h2>
 <p>Welcome to your new single-page application, built with:</p>
 <ul>
