Cleaned up some of the old template stuff

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,10 +1,14 @@
 <h1>Hello, {{user?.firstName}} {{user?.lastName}}!</h1>
-<h2>I'm a banana!</h2>
 <p>Welcome to your new single-page application, built with:</p>
 <ul>
   <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
   <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
   <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
+  <li><a href='https://azure.microsoft.com/en-us/services/app-service/'>Azure App Service</a> for providing a highly available and scalable ASP.NET environment</li>
+  <li><a href='https://azure.microsoft.com/en-us/services/cognitive-services/bing-web-search-api/'>Bing Web Search API</a> for searching for images</li>
+  <li><a href='https://azure.microsoft.com/en-us/services/cognitive-services/computer-vision/'>Azure Cognitive Services</a> for analyzing images and producing relevant features about the image</li>
+  <li><a href='https://azure.microsoft.com/en-us/services/sql-database/'>Azure Storage</a> for saving the images</li>
+  <li><a href='https://azure.microsoft.com/en-us/services/sql-database/'>Azure SQL DB</a> for storing analysis results about the images</li>
 </ul>
 <p>To help you get started, we've also set up:</p>
 <ul>
