--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -22,6 +22,11 @@
                         <span class='glyphicon glyphicon-education'></span> Search
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/gallery']">
+                        <span class='glyphicon glyphicon-picture'></span> Gallery
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
